--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 certifi==2025.1.31
 click==8.1.8
-dnspython==2.7.0
+dnspython==1.16.0
 email_validator==2.2.0
 fastapi==0.115.11
 fastapi-cli==0.0.7
@@ -18,6 +18,7 @@ mdurl==0.1.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
+pymongo==3.12.0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
